sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:6: error: value =< is not a member of Int
  while (zonebleue=<zonerouge){
                  ^